# petro

./: .gitignore  CMakeLists.txt  LICENSE.rst  NEWS.rst  README.rst  buildbot.py  config.py  giit.json  resolve.json  wscript
.github/workflows/: build.yml
docs/: conf.py  index.rst  requirements.txt
docs/examples/: complete_parser.rst  examples.rst  mp4_to_aac.rst  mp4_to_h264.rst
docs/user_api/: bit_stream.rst  decoding_time.rst  error.rst  matrix.rst  picture_parameter_set.rst  presentation_time.rst  stream.rst  user_api.rst
docs/user_api/extractor/: aac_sample_extractor.rst  avc_sample_extractor.rst  extractor.rst  track_extractor.rst
examples/: access_unit_parser.cpp  complete_parser.cpp  mp4_to_aac.cpp  mp4_to_acc.cpp  mp4_to_h264.cpp  wscript_build
examples/notebook/: parse_mp4_file.ipynb
src/petro/: bit_reader.hpp  bit_stream.hpp  byte_stream.cpp  byte_stream.hpp  decoding_time.hpp  error.hpp  error_tags.hpp  flags.hpp  helper.cpp  helper.hpp  matrix.hpp  parser.hpp  picture_parameter_set.hpp  presentation_time.hpp  sequence_parameter_set.hpp  stream.cpp  stream.hpp  stream_error_code_wrapper.hpp  utils.hpp  wscript_build
src/petro/box/: all.hpp  avcc.cpp  avcc.hpp  (+129 more)
test/: petro_tests.cpp  test.aac  test.h264  test2.h264  test3.h264  wscript_build
test/src/: test_bit_reader.cpp  test_bit_stream.cpp  test_byte_stream.cpp  test_bytes_stream.cpp  test_decoding_time.cpp  test_helper.cpp  test_parser.cpp  test_picture_parameter_set.cpp  test_presentation_time.cpp  test_sequence_parameter_set.cpp  test_stream.cpp  test_stream_error_code_wrapper.cpp
(+163 files in other folders)
